--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <div id="root"><span>HI</span></div>
-    </body>
+  <meta charset="utf-8" />
+  <head>
+    <title>Vue Hello World</title>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
